--- a/birthday/indextwo.html
+++ b/birthday/indextwo.html
@@ -38,7 +38,7 @@ h2 {text-align: center;}
 
 
 
-  <p style="color: purple;"> We hope you enjoyed your birthday gift from the Quen Family. We hope that you have a good birthday, and that all of your dreams come true. We love you so much! &#127769;&#128158;<br>
+  <p style="color: purple;"> We hope you enjoyed your birthday gift from the Quen Family. We hope that you have a good birthday, and that all of your dreams come true. We love you so much! &#128158;<br>
 
   <p> Ps. We are also very proud of you and your achievements! <br>
     추신. 우리는 또한 당신과 당신의 업적이 매우 자랑스럽습니다! </p>
