--- a/birthday/indextwo.html
+++ b/birthday/indextwo.html
@@ -31,6 +31,11 @@ h2 {text-align: center;}
 <p>The following are/is video compilations that have been put together from your fans for you ^-^ <br>
   다음은 팬 여러분이 여러분을 위해 모은 편집 영상입니다 ^-^ </p>
   
+  <p><a href=""> Queen Anita birthday video</a></p>
+  <p><a href=""> Ele birthday message </a></p>
+  <p><a href=""> Izzie birthday video</a></p>
+  <p><a href=""> Vay birthday video</a></p>
+  <p><a href=""> Nillo birthday video</a></p>
 
   
 
