--- a/birthday/indextwo.html
+++ b/birthday/indextwo.html
@@ -32,7 +32,7 @@ h2 {text-align: center;}
   다음은 팬 여러분이 여러분을 위해 모은 편집 영상입니다 ^-^ </p>
   
   <p><a href=""> Queen Anita birthday video</a></p>
-  <p><a href=""> Ele birthday message </a></p>
+  <p><a href="jaramilloa.github.io/birthday/IMG_20221122_000156_400[1].jpg"> Ele birthday message </a></p>
   <p><a href=""> Izzie birthday video</a></p>
   <p><a href=""> Vay birthday video</a></p>
   <p><a href=""> Nillo birthday video</a></p>
