--- a/birthday/indextwo.html
+++ b/birthday/indextwo.html
@@ -34,7 +34,7 @@ h2 {text-align: center;}
   <p><a href="jaramilloa.github.io/birthday/VID_161711020_075505_287[1].mp4"> Queen Anita birthday video</a></p>
   <p><a href="jaramilloa.github.io/birthday/IMG_20221122_000156_400[1].jpg"> Ele birthday message </a></p>
   <p><a href="jaramilloa.github.io/birthday/2022_11_22_00_47[1].mp4"> Izzie birthday video</a></p>
-  <p><a href=""> Vay birthday video</a></p>
+  <p><a href="jaramilloa.github.io/birthday/2022_11_22_00_47_(1)[1].mp4"> Vay birthday video</a></p>
   <p><a href=""> Nillo birthday video</a></p>
 
   
