--- a/birthday/indextwo.html
+++ b/birthday/indextwo.html
@@ -39,7 +39,8 @@ h2 {text-align: center;}
 
   
 
-  <p style="color: royal;"> We hope you enjoyed your birthday gift from the Quen Family. We hope that you have a good birthday, and that all of your dreams come true. We love you so much! &#128158;<br>
+  <p style="color: royal;"> We hope you enjoyed your birthday gift from the Quen Family. We hope that you have a good birthday, and that all of your dreams come true. We love you so much! &#128081;&#128158;<br>
+    Quen Family의 생일 선물이 마음에 드셨기를 바랍니다. 즐거운 생일 보내시고 모든 꿈이 이루어지기를 바랍니다. 우리는 너를 너무 사랑해!  &#128081;&#128158; </p>
 
   <p style="color: royal;"> Ps. We are also very proud of you and your achievements! <br>
     추신. 우리는 또한 당신과 당신의 업적이 매우 자랑스럽습니다! </p>
