--- a/birthday/index.html
+++ b/birthday/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mir's Birthday Page </title>
+  <title>Mir's Birthday Page &#127769; </title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
 h1 {text-align: center;}
