--- a/MoonFlower.html
+++ b/MoonFlower.html
@@ -6,12 +6,10 @@
 
   <title>Moon Flower Cafe</title>
   
-  <style="background-color:black;">
-  
 
 </head>
 
-<body>
+<body style="background-color:black;">
 
 <h1 style="color:white;"> Visit our instagram cafe page: </h1>
 
