--- a/birthday/indexsix.html
+++ b/birthday/indexsix.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine Day Card</title>
+    <title>Minu's Example Card</title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="envelope"></div>
     <div class="card">
-      <h1 class="message">Do you know!<br>what’s on Valentine’s Day menu?<br>Me n U :)</h1>
+      <h1 class="message">Holiss!<br>Este seria el ejemplo<br>Que piensas?</h1>
       <div class="heart"></div>
     </div>
     <div class="cover"></div>
