--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -16,9 +16,8 @@ h2 {text-align: center;}
 <body>
   <h1>&#127882;&#129354;Welcome to Minu's Anniversary Webpage! &#127882;&#129354;</h1>
   
-  <h2><span style='font-size:100px;'>&#127874;</span></h2>
   <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;</p>
-  <p> message</p>
+  <p> We can write a message here that we want him to see before he gets to the videos and the letters. It can be long or short depending. </p>
 
 <h3 style="color: #38B4FE;">&#127881;Videos&#127881;<br>
  &#127881;비디오&#127881;</h3>
@@ -35,10 +34,10 @@ h2 {text-align: center;}
 
 
 
-  <p style="color: purple;"> words </p>
+  <p style="color: purple;"> Maybe some words can be added here if that's an option. If not then it can be removed. </p>
   
-  <p> Ps. We are also very proud of you and your achievements! <br>
-    추신. 우리는 또한 당신과 당신의 업적이 매우 자랑스럽습니다! </p>
+  <p> Ps. We are also very proud of you and your achievements. We hope to continue to spend more time with you! &#127892;<br>
+    추신. 또한 귀하와 귀하의 업적이 매우 자랑스럽습니다. 앞으로도 더 많은 시간을 여러분과 함께할 수 있기를 바랍니다! &#127892;</p>
   
 
 
