--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -32,6 +32,8 @@ h2 {text-align: center;}
   <p>&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;</p>
   
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryanita.html">Anita's Anniversary Card</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarynaty.html">Naty's Anniversary Card</a></p>
+
 
 
   <p style="color: purple;"> Maybe some words can be added here if that's an option. If not then it can be removed. </p>
