--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -44,7 +44,7 @@ h2 {text-align: center;}
 
 
   <footer style="text-align: center;">
-    <p>Copyright &copy; 2024 Nillo/Anita </p>
+    <p>Copyright &copy; 2024 Anita </p>
    </footer>
   </body>
   </html>
