--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -19,7 +19,7 @@ h2 {text-align: center;}
   <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;</p>
   <p> We can write a message here that we want him to see before he gets to the videos and the letters. It can be long or short depending. </p>
 
-<h3 style="color: #38B4FE;">&#127881;Videos&#127881;<br>
+<h3 style="color: #235fdf;">&#127881;Videos&#127881;<br>
  &#127881;비디오&#127881;</h3>
   <p>&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;&#128253;</p>
 
@@ -27,7 +27,7 @@ h2 {text-align: center;}
   다음은 팬 여러분이 여러분을 위해 모은 편집 영상입니다 ^-^ </p>
   
   
- <h3 style="color: #38B4FE;">&#127881;Cards&#127881;<br>
+ <h3 style="color: #235fdf;">&#127881;Cards&#127881;<br>
   &#127881;카드&#127881;</h3>
   <p>&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;</p>
   
