--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -13,11 +13,15 @@ h2 {text-align: center;}
 
 </style>
 </head>
-<body>
-  <h1>&#127882;&#129354;Welcome to Minu's Anniversary Webpage! &#127882;&#129354;</h1>
+<body>,
+  <h1>&#129354;Welcome to Minu's Mailbox &#129354;<br>
+&#129354;Bienvenidos al buzon de Minu &#129354;</h1>
   
   <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;</p>
-  <p> We can write a message here that we want him to see before he gets to the videos and the letters. It can be long or short depending. </p>
+  <p>Felicidades por tus 300 días de transmisión, este buzón de mensajes contiene nuestros deseos para ti. Eres alguien únicoy especial para nosotras. <br>
+    Congratulations on your 300 days of broadcasting! This mailbox contains all our wishes for you. You are truly precious and special to us. <br>
+    방송 300일을 진심으로 축하해요! 이 메시지함에는 우리 모두의 소망이 담겨 있어요. 당신은 우리에게 정말 소중하고 특별한 사람이에요.
+ </p>
   
   
  <h3 style="color: #235fdf;">&#127881;Cards&#127881;<br>
