--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -15,18 +15,22 @@ h2 {text-align: center;}
 </head>
 <body>,
   <h1>&#129354;Welcome to Minu's Mailbox &#129354;<br>
-&#129354;Bienvenidos al buzon de Minu &#129354;</h1>
+&#129354;Bienvenidos al buzón de Minu &#129354;</h1>
   
   <p>&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;&#9829;&#9825;</p>
-  <p>Felicidades por tus 300 días de transmisión, este buzón de mensajes contiene nuestros deseos para ti. Eres alguien únicoy especial para nosotras. <br>
+  <p>Felicidades por tus 300 días de transmisión, este buzón de mensajes contiene nuestros deseos para ti. Eres alguien único y especial para nosotras. <br>
     Congratulations on your 300 days of broadcasting! This mailbox contains all our wishes for you. You are truly precious and special to us. <br>
     방송 300일을 진심으로 축하해요! 이 메시지함에는 우리 모두의 소망이 담겨 있어요. 당신은 우리에게 정말 소중하고 특별한 사람이에요.
  </p>
   
   
- <h3 style="color: #235fdf;">&#127881;Cards&#127881;<br>
+ <h3 style="color: #df2329;">&#127881;Cards&#127881;<br>
   &#127881;카드&#127881;</h3>
   <p>&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;</p>
+
+<p> A continuación encontrarás los correos que han llegado para ti de todas partes del mundo 🌎 <br>
+  Here you will find the emails that have arrived for you from all around the world 🌎 <br>
+여기 전 세계에서 당신에게 도착한 이메일들이 모여 있어요 🌎</p>
   
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryanita.html">Anita's Anniversary Card</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversarynaty.html">Naty's Anniversary Card</a></p>
