--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -13,7 +13,7 @@ h2 {text-align: center;}
 
 </style>
 </head>
-<body>,
+<body>
   <h1>&#129354;Welcome to Minu's Mailbox &#129354;<br>
 &#129354;Bienvenidos al buzón de Minu &#129354;</h1>
   
