Update and rename anniversaryanita.html to anniversarykali.html

--- a/birthday/anniversarykali.html
+++ b/birthday/anniversarykali.html
@@ -5,7 +5,7 @@
 <div class="cardFront">
   <div class="front-text">
   <h3 class="happy">HAPPY</h3>
-  <h2 class="bday">ANNIVERSARY</h2> 
+  <h2 class="bday">300 DAYS </h2> 
   <h3 class="toyou">MINU!</h3>  
   </div>
   <div class="wrap-deco">
@@ -25,13 +25,17 @@
   <div class="cardInside">
      <div class="inside-text">
   <h3 class="happy">HAPPY</h3>
-  <h2 class="bday">ANNIVERSARY</h2> 
-  <h3 class="toyou">TO YOU!</h3>  
+  <h2 class="bday">300</h2> 
+  <h3 class="toyou">DAYS!</h3>  
   </div>
     <div class="wishes">
-    <p>Feliz aniversario. Espero que puedas seguir logrando todos tus sueños. Sé que hay días en tiktok que son difíciles. pero usted ha continuado haciéndolo. no se rinda nunca. Espero que podamos seguir creciendo juntos como un equipo!
+    <p>Hello Minu!!!
+happy 300 days of being you✨
+Thank you for sharing a part of your daily life with the minis 💕 continue to be that happy and funny person 😅 may the successes continue in your life 🫶🏻
+축하해요 🎉
 </p>
-    <p class="name">Ejemplo de Anita</p>
+    <p class="name">Kali tog🧸
+</p>
     </div>
   </div>
 </div>
