--- a/birthday/anniversarykali.html
+++ b/birthday/anniversarykali.html
@@ -4,10 +4,9 @@
 <div class="birthdayCard">
 <div class="cardFront">
   <div class="front-text">
-  <h3 class="happy">HAPPY</h3>
-  <h2 class="bday">300</h2> 
-  <h3 class="toyou">DAYS</h3>
-  <h4 class="toyou">MINU!</h4>
+  <h3 class="happy">300</h3>
+  <h2 class="bday">DAYS</h2> 
+  <h3 class="toyou">MINU!</h3>
   </div>
   <div class="wrap-deco">
 <div class="decorations"></div>
