--- a/birthday/anniversarykali.html
+++ b/birthday/anniversarykali.html
@@ -7,7 +7,7 @@
   <h3 class="happy">300</h3>
   <h2 class="bday">DAYS</h2>
   <h3 class="bday">WITH</h3>
-  <h class="toyou">MINU!</h4>
+  <h4 class="toyou">MINU!</h4>
   </div>
   <div class="wrap-deco">
 <div class="decorations"></div>
