--- a/birthday/anniversarykali.html
+++ b/birthday/anniversarykali.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <link rel="stylesheet" type="text/css" href="birthday2.css">
+  <link rel="stylesheet" type="text/css" href="birthday.css">
 <div class="birthdayCard">
 <div class="cardFront">
   <div class="front-text">
