--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -24,7 +24,7 @@ h2 {text-align: center;}
  </p>
   
   
- <h3 style="color: #df2329;">&#127881;Cards&#127881;<br>
+ <h3 style="color: #302ded;">&#127881;Cards&#127881;<br>
   &#127881;카드&#127881;</h3>
   <p>&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;&#128140;</p>
 
