--- a/birthday/anniversaryfernanda.html
+++ b/birthday/anniversaryfernanda.html
@@ -29,9 +29,9 @@
   <h3 class="toyou">TO YOU!</h3>  
   </div>
     <div class="wishes">
-    <p>mensaje
+    <p>Hola Minu, estoy feliz por tus 300 días, me alegra mucho haberte conocido, Tqm.
 </p>
-    <p class="name">XXXX</p>
+    <p class="name">Fernanda</p>
     </div>
   </div>
 </div>
