--- a/birthday/anniversaryfernanda.html
+++ b/birthday/anniversaryfernanda.html
@@ -4,9 +4,10 @@
 <div class="birthdayCard">
 <div class="cardFront">
   <div class="front-text">
-  <h3 class="happy">HAPPY</h3>
-  <h2 class="bday">ANNIVERSARY</h2> 
-  <h3 class="toyou">MINU!</h3>  
+  <h3 class="happy">300</h3>
+  <h2 class="bday">DAYS</h2>
+  <h3 class="bday">WITH</h3>
+  <h4 class="toyou">MINU!</h4> 
   </div>
   <div class="wrap-deco">
 <div class="decorations"></div>
@@ -25,8 +26,8 @@
   <div class="cardInside">
      <div class="inside-text">
   <h3 class="happy">HAPPY</h3>
-  <h2 class="bday">ANNIVERSARY</h2> 
-  <h3 class="toyou">TO YOU!</h3>  
+  <h2 class="bday">300</h2> 
+  <h3 class="toyou">DAYS</h3>  
   </div>
     <div class="wishes">
     <p>Hola Minu, estoy feliz por tus 300 días, me alegra mucho haberte conocido, Tqm.
