--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -33,7 +33,7 @@ h2 {text-align: center;}
 여기 전 세계에서 당신에게 도착한 이메일들이 모여 있어요 🌎</p>
   
 <p><a href="https://jaramilloa.github.io/birthday/anniversarykali.html">Mensaje de Kali</a></p>
-<p><a href="https://jaramilloa.github.io/birthday/anniversarynaty.html">Naty's Anniversary Card</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryfernanda.html">Mensaje de Fernanda</a></p>
 
 
 
