--- a/birthday/anniversarymarcia.html
+++ b/birthday/anniversarymarcia.html
@@ -5,7 +5,7 @@
 <div class="cardFront">
   <div class="front-text">
   <h3 class="happy">300</h3>
-  <h2 class="bday">DAYS</h2>
+  <h2 class="happy">DAYS</h2>
   <h3 class="bday">WITH</h3>
   <h4 class="toyou">MINU!</h4>
   </div>
