--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -36,7 +36,9 @@ h2 {text-align: center;}
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryfernanda.html">Mensaje de Fernanda</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversarymarcia.html">Mensaje de Marcia</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversarymonse.html">Mensaje de Monse</a></p>
-
+<p><a href="https://jaramilloa.github.io/birthday/anniversarykata.html">Mensaje de Katherine</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryrodolfo.html">Mensaje de Rodolfo</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryandy.html">Mensaje de Andy</a></p>
 
 
 
