--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -39,7 +39,8 @@ h2 {text-align: center;}
 <p><a href="https://jaramilloa.github.io/birthday/anniversarykata.html">Mensaje de Katherine</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryrodolfo.html">Mensaje de Rodolfo</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryandy.html">Mensaje de Andy</a></p>
-
+<p><a href="https://jaramilloa.github.io/birthday/anniversarysol.html">Mensaje de Sol</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryandrea.html">Mensaje de Andrea</a></p>
 
 
 
