--- a/birthday/anniversaryandy.html
+++ b/birthday/anniversaryandy.html
@@ -30,7 +30,7 @@
   <h3 class="toyou">DAYS!</h3>  
   </div>
     <div class="wishes">
-    <p>hi boss✨ i want to thank you for all the moments we have lived, I ll’ve been here almost two hundred days but I have known a lot about you🥹 Thank you for all the time we spent together, for taking us out to get to know Korea by your hand, for all the laughs and dances. I always wish you become a main  character in many series because you’re the main character for me, I appreciate your time, energy and effort to be with us♥ I told you I’ll be here as long as you let me be here, I love you so much
+    <p>hi boss✨<br> i want to thank you for all the moments we have lived, I would've been here almost two hundred days, but I have known a lot about you🥹 Thank you for all the time we spent together, for taking us out to get to know Korea by your hand, for all the laughs and dances. I always wish you become a main  character in many series because you’re the main character for me, I appreciate your time, energy and effort to be with us♥ I told you I’ll be here as long as you let me be here, I love you so much
 </p>
     <p class="name"> Andy
 </p>
