--- a/birthday/anniversarykali.html
+++ b/birthday/anniversarykali.html
@@ -30,9 +30,9 @@
   <h3 class="toyou">DAYS!</h3>  
   </div>
     <div class="wishes">
-    <p>Hello Minu!!!
-happy 300 days of being you✨
-Thank you for sharing a part of your daily life with the minis 💕 continue to be that happy and funny person 😅 may the successes continue in your life 🫶🏻
+    <p>Hello Minu!!! <br>
+happy 300 days of being you✨<br>
+Thank you for sharing a part of your daily life with the minis 💕 continue to be that happy and funny person 😅 may the successes continue in your life 🫶🏻<br>
 축하해요 🎉
 </p>
     <p class="name">Kali tog🧸
