--- a/birthday/anniversarykata.html
+++ b/birthday/anniversarykata.html
@@ -30,7 +30,7 @@
   <h3 class="toyou">DAYS!</h3>  
   </div>
     <div class="wishes">
-    <p>Gracias por ser una persona única, te deseo mucho éxito, que alcances todo lo que te propongas, que tengas mucha salud y que seas muy feliz siempre 💕
+    <p>Gracias por ser una persona única, te deseo mucho éxito, que alcances todo lo que te propongas, que tengas mucha salud y que seas muy feliz siempre 💕 <br>
 Yo estaré apoyándote.🤍
 </p>
     <p class="name"> Katherine
