--- a/birthday/anniversarymaldonado.html
+++ b/birthday/anniversarymaldonado.html
@@ -30,7 +30,8 @@
   <h3 class="toyou">DAYS!</h3>  
   </div>
     <div class="wishes">
-    <p>Minu Estoy muy feliz de conocerte ,Cada sonrisa reflejada en tu rostro, es el reflejo de tu felicidad amamos verte sonreír siempre 🩵"Una amistad no crece por la presencia de las personas, sino por la magia de saber que aunque no las veas, las llevas  en el corazón".🩵 Te queremos mucho
+    <p>Minu <br> Estoy muy feliz de conocerte. Cada sonrisa reflejada en tu rostro, es el reflejo de tu felicidad amamos verte sonreír siempre 🩵
+<br>"Una amistad no crece por la presencia de las personas, sino por la magia de saber que aunque no las veas, las llevas  en el corazón".🩵 Te queremos mucho
 </p>
     <p class="name"> Maldonado
 </p>
