--- a/birthday/anniversarymarcia.html
+++ b/birthday/anniversarymarcia.html
@@ -30,11 +30,7 @@
   <h3 class="toyou">DAYS!</h3>  
   </div>
     <div class="wishes">
-    <p>La vida es un viaje así que disfruta del proceso
- La vida no siempre es justa pero aun así merece la pena vivirla
- Minu sigue siendo así de lindo amable y llegaras muy lejos 
-Y muy pronto seras el protagonista 
-Y nosotras estaremos muy orgullosas ti .porque conocemos tu humildad tqm Minu
+    <p>La vida es un viaje así que disfruta del proceso. La vida no siempre es justa pero aun así merece la pena vivirla. Minu sigue siendo así de lindo amable y llegaras muy lejos. Y muy pronto seras el protagonista. Y nosotras estaremos muy orgullosas ti .porque conocemos tu humildad tqm Minu
 </p>
     <p class="name">Marcia
 </p>
