--- a/birthday/anniversarypao.html
+++ b/birthday/anniversarypao.html
@@ -30,7 +30,7 @@
   <h3 class="toyou">DAYS!</h3>  
   </div>
     <div class="wishes">
-    <p>Minu feliz navidad espero la pases muy bien, te deseo muchos éxitos y mucha prosperidad... Gracias por alegrarnos los días. Espero te vaya muy bien te quiero mucho💋🎄🎄
+    <p>Minu feliz 300 días! Espero la pases muy bien, te deseo muchos éxitos y mucha prosperidad... Gracias por alegrarnos los días. Espero te vaya muy bien te quiero mucho💋
 </p>
     <p class="name"> Pao
 </p>
