--- a/birthday/anniversaryrodolfo.html
+++ b/birthday/anniversaryrodolfo.html
@@ -30,7 +30,7 @@
   <h3 class="toyou">DAYS!</h3>  
   </div>
     <div class="wishes">
-    <p>Eres el mejor Minu, Espero tengas mucho éxito en lo que te propongas y que cuentas conmigo para apoyarte como Amigo🫂 cuando me necesites hay estaré. TQM🫶🏼 </br>
+    <p>Eres el mejor Minu. Espero tengas mucho éxito en lo que te propongas y que cuentas conmigo para apoyarte como Amigo🫂 cuando me necesites hay estaré. TQM🫶🏼 </br>
 Siempre se Feliz
 </p>
     <p class="name"> Rodolfo
