--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -41,6 +41,10 @@ h2 {text-align: center;}
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryandy.html">Mensaje de Andy</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversarysol.html">Mensaje de Sol</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryandrea.html">Mensaje de Andrea</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarymaldonado.html">Mensaje de Maldonado</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarypao.html">Mensaje de Pao</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarymey.html">Mensaje de Mey</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarypatricia.html">Mensaje de Patricia</a></p>
 
 
 
