--- a/birthday/anniversaryyara.html
+++ b/birthday/anniversaryyara.html
@@ -34,7 +34,7 @@
     Deseo que sigas cosechando éxitos en todo lo que hagas, sabes que siempre estaré para apoyarte y ser tenstigo de tu crecimiento, te quiero mucho nunca cambies !!! 
 
 </p>
-    <p class="name"> Yara
+    <p class="name"> Cha. Yara
 </p>
     </div>
   </div>
