--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -45,10 +45,21 @@ h2 {text-align: center;}
 <p><a href="https://jaramilloa.github.io/birthday/anniversarypao.html">Mensaje de Pao</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversarymey.html">Mensaje de Mey</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversarypatricia.html">Mensaje de Patricia</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryvale.html">Mensaje de Vale</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryeli.html">Mensaje de Eli</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarytoby.html">Mensaje de Toby</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarydany.html">Mensaje de Dany</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryale.html">Mensaje de Ale</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryvaleria.html">Mensaje de Valeria</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryjessy.html">Mensaje de Jessy</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarykarime.html">Mensaje de Karime</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarylizeht.html">Mensaje de Lizeht</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryvane.html">Mensaje de Vane</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryguille.html">Mensaje de Guille</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarynaty.html">Mensaje de Naty</a></p>
 
 
 
-  <p style="color: purple;"> Maybe some words can be added here if that's an option. If not then it can be removed. </p>
   
   <p> Ps. We are also very proud of you and your achievements. We hope to continue to spend more time with you! &#127892;<br>
     추신. 또한 귀하와 귀하의 업적이 매우 자랑스럽습니다. 앞으로도 더 많은 시간을 여러분과 함께할 수 있기를 바랍니다! &#127892;</p>
