--- a/birthday/indexthree.html
+++ b/birthday/indexthree.html
@@ -56,6 +56,10 @@ h2 {text-align: center;}
 <p><a href="https://jaramilloa.github.io/birthday/anniversarylizeht.html">Mensaje de Lizeht</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryvane.html">Mensaje de Vane</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversaryguille.html">Mensaje de Guille</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryerikita.html">Mensaje de Erikita</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarygiovanna.html">Mensaje de Giovanna</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversaryyara.html">Mensaje de Yara</a></p>
+<p><a href="https://jaramilloa.github.io/birthday/anniversarykari.html">Mensaje de Kariño</a></p>
 <p><a href="https://jaramilloa.github.io/birthday/anniversarynaty.html">Mensaje de Naty</a></p>
 
 
